correction overflow

--- a/main.scss
+++ b/main.scss
@@ -69,6 +69,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 .container {
@@ -386,7 +387,7 @@ body {
 .sticky {
   position: fixed;
   top: 0;
-  width: 100%;
+  width: 100vw;
   z-index: 5;
 } 
 
